# eupmini

./: BARRY.DOC  BARRY3_3.PMB  CMakeLists.txt  HE386.TXT  HE386_UTF8.TXT  Makefile  NEWS-ja  OKE_BR_2.FMB  README-ja  README.md  TODO  WANDER.EUP  WANDER.GGG  eupplay.1  eupplay.1.in  eupplay.cpp  eupplayer.cpp  eupplayer.hpp  eupplayer_towns.hpp  eupplayer_townsEmulator.cpp  eupplayer_townsEmulator.hpp  eupplayer_townsInternal.cpp  eupplayer_townsInternal.hpp  missing  mkinstalldirs  mksintbl  mksintbl.c  readme_vcpkg_cmake.txt  sintbl.cpp  sintbl.hpp
.github/workflows/: ccpp.yml
